feat: add Postgres repository,  product use cases (CQRS), HTTP handlers with Swagger.
